LU-3650 ldlm: prealloc cl_env for ldlm blocking threads

Prealloc cl_env for ldlm blocking threads to avoid allocation
failure in OSC blocking AST.

Signed-off-by: Lai Siyao <lai.siyao@intel.com>
Change-Id: I7249eb28b82d68311b0599ac3a674b31919ab10a